# reviewer-db-ia

./: .env  .env.inter.win  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
demo/deploy/2026/20260408191400/: 001.Table.sql  002.Insert.sql
demo/deploy/2026/20260408191400/rollback/: 001.Table.sql
deploy/2026/20261107135952/: 001.Insert.pi.material.MaterialTipo.sql  035.Insert.RequerimientoInformacionAsociada_dummy.sql  060.Insert.material_materialpublicacion_dummy_ia_select.sql  README.md
src/: graph.py  main.py  models.py  schema_memory.py  skill_middleware.py
src/agents/: __init__.py  coherence.py  mini_reporter.py  reporter.py  reviewer.py  validator.py
src/prompts/: coherence_system.md  mini_reporter_system.md  reporter_system.md  reviewer_fallback.md  reviewer_system.md
src/skills/sql-code-review/: SKILL.md
